Fixed the footer to the bottom of the page. Added overflow-x: hidden to the body.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,6 +5,7 @@ body {
     flex-direction: column;
     font-family: Mont;
     letter-spacing: 1px;
+    overflow-x: hidden;
 }
 
 @font-face {
@@ -253,6 +254,9 @@ h3 {
 footer {
     background-color: white;
     color: black;
+    position: fixed;
+    bottom: 0;
+    width: 100vw;
 }
 
 
